--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
+name: py-to-exe
+
 on:
   push:
     branches:
       - main
   schedule:
-    - cron: "30 13 * * 5"
+    - cron: "0 0 * * 0"
 
 permissions:
   contents: read
@@ -16,18 +18,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.11.4
+      - name: Set up Python 3.11.2
         uses: actions/setup-python@v3
         with:
-          python-version: "3.11.4"
+          python-version: "3.11.2"
+
       - name: Install PyInstaller
         run: python -m pip install pyinstaller
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          chmod +x installResources.sh
-          ./installResources.sh
+          ./script.bat
 
       - name: Build app with PyInstaller
         run: |
